--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  font-family: 'Roboto' !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container-fluid {
+  padding: 0px 50px !important;
 }
+
+.location-title {
+  font-size: 28px;
+  font-weight: 700;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.location-title .highlight {
+  color: #333333;
+  font-weight: 600;
+  border-left: 5px solid;
+  border-image: linear-gradient(to bottom, #FF7F00, #FF7F00) 1;
+  border-image-slice: 1;
+  padding-left: 13px;
+}
+
+.highlighted-text {
+  font-weight: 600;
+}
+
+@media only screen and (max-width: 499px) {
+  .container-fluid {
+    width: 100% !important;
+    padding: 0px 15px !important;
+  }
+}
+
