--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,40 +1,3 @@
-/* #login {
-    background: url('../../assets/images/back.jpg') no-repeat center center;
-    background-size: cover;
-}
-
-.illustration-img {
-    background-size: cover;
-    width: 100%;
-}
-
-.form-container {
-    text-align: left;
-}
-
-.btn-primary {
-    background-color: #7367f0;
-    border: none;
-}
-
-.btn-primary:hover {
-    background-color: #5e50ee;
-}
-
-.text-primary {
-    color: #7367f0 !important;
-}
-
-.social-icons i {
-    font-size: 1.5rem;
-    cursor: pointer;
-}
-
-.social-icons i:hover {
-    opacity: 0.8;
-} */
-
-
 #login {
     background: url('../../assets/images/back.jpg') no-repeat center center;
     background-size: cover;
@@ -44,20 +7,31 @@
     padding: 8px;
 }
 
-#login .illustration-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 #login input {
     outline: none;
     box-shadow: none;
 }
 
+.is-invalid {
+    border-color: inherit !important;
+    background-image: none !important;
+}
+
+.error-text {
+    color: #ff6666;
+    font-size: 0.875rem;
+    margin-top: 5px;
+}
+
+.error-border {
+    border: 2px solid #ff7f7f !important;
+}
+
+
 #login input:focus {
-    border-color: #5e50ee;
-    box-shadow: 0 0 2px #5e50ee;
+    border-color: #8A2BE2;
+    box-shadow: 0 0 2px #8A2BE2;
 }
 
 #login .illustration-img {
@@ -75,16 +49,16 @@
 }
 
 #login .btn-primary {
-    background-color: #7367f0;
+    background-color: #8A2BE2;
     border: none;
 }
 
 #login .btn-primary:hover {
-    background-color: #5e50ee;
+    background-color: #5d2790;
 }
 
 #login .text-primary {
-    color: #7367f0 !important;
+    color: #8A2BE2 !important;
 }
 
 #login .social-icons i {
@@ -103,34 +77,57 @@
 .password-toggle-icon {
     cursor: pointer;
     position: absolute;
-    right: 10px;
-    top: 70%;
-    transform: translateY(-25%);
-    color: #7367f0;
+    right: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #8A2BE2;
+    font-size: 0.8rem;
     z-index: 2;
 }
+.form-check-label {
+    font-size: 15px;
+}
+.forget-password{
+    font-size: 15px;
 
-@media (max-width: 1024px) {
-    #login .illustration-container {
-        display: none;
-    }
+}
 
+@media (min-width: 768.01px) {
     #login .row {
-        width: 100% !important;
-        margin: 0 !important;
+        width: 70% !important;
     }
 }
 
-@media (min-width: 1024.01px) {
-    #login .illustration-container {
-        display: flex;
-    }
-
+@media (min-width: 1024px) {
     #login .row {
-        width: 75%;
+        width: 60% !important;
     }
+}
 
-    #login .form-container {
-        padding: 2rem !important;
+@media (min-width: 1200px) {
+    #login .row {
+        width: 50% !important;
+    }
+}
+
+@media (min-width: 1400px) {
+    #login .row {
+        width: 40% !important;
+    }
+}
+
+@media (max-width: 768.01px) {
+    #login .row {
+        width: 100% !important;
+    }
+}
+
+@media (max-width: 365px) {
+    .form-check-label {
+        font-size: 13px;
+    }
+    .forget-password{
+        font-size: 13px;
+  
     }
 }
