--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body{
   color: #333333;
   font-weight: 600;
   border-left: 5px solid;
-  border-image: linear-gradient(to bottom, #FF7F00, #FF7F00) 1;
+  border-image: linear-gradient(to bottom, #b773f7, #a549fb) 1;
   border-image-slice: 1;
   padding-left: 13px;
 }
